log/build_2025-02-27_10-12-10/robot_control/stderr.log
  File "<fstring>", line 1
    (sel••••••••••f.global_hooks_dict[str(self.act_hook_num)]['xyz_tip_workframe'])
                  ^
SyntaxError: invalid character in identifier

